    fixing #2973

2007-12-05 cjg
 * Fixed some bugs in the VLit code.

2007-12-05 tdb
 * Cap the maximum message size at 40,000 bytes from Import, fixing #3067

2007-12-07 tdb
 * Quote names in emails if they contain a comma, fixing #3112
 * "If there are no items under review" phrase correction, fixing #2998
 * Modified SESSION::render_ruler to use the ruler phrase, fixing #3155
 * Compound fields can be non-multiple, fixing #2983
 * 'minuser' type users can no longer view Screen::Import, fixing #3108

2007-12-10 tdb
 * Added method 'clear_changed' to DataObj
 * Removed redundant and broken fileinfo setting in eprint_fields_automatic
 * Objects read from the database will no longer always be committed, fixing
    #3156
 * Don't substr an undefined value in Time fields, fixing #3111
 * Moved page range rendering into 4 phrases, dependent on the pagerange value,
    fixing #2987

2007-12-11 tdb
 * Fixed blister-bar so it correctly hides/shows workflow items controlled with
    STAFF_ONLY, fixing #2985
 * Added optional phrase to Manage Deposits screen "Plugin/Screen/Items:intro"
    that allows some explanatory text to be added, fixing #3000
 * Subjects inputform plugin now uses a field-specific search_bar phrase,
    fixing #3070
 * Don't always show the owner_denied message, fixing #3130
 * Use has_role to determine whether a user is an editor or admin, fixing #2968
 * Added a config option 'max_history_width' to control the width of XML diffs
    on the History screen, fixing #3146
 * Set the character encoding in MIME emails to UTF8, fixing #3150
 * Added 'Save for Later' button to deposit screen, fixing #3071
 * Added a note to Saved searches screen to indicate how to create a Saved
    Search, fixing #2999
 * Strip namespacing from HTML exports (fixes <emph> in citations) under
    LibXML, fixing #3085
 * Strip prefixes from noxmlns to_string output (bug fix for XML::LibXML),
    fixing #3007
